--- a/Youtube/templates/head.html
+++ b/Youtube/templates/head.html
@@ -19,12 +19,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Open+Sans&display=swap"
         rel="stylesheet">
 
-    <link href={% static "css/bootstrap.min.css" %} rel="stylesheet">
+    <!-- <link href={% static "css/bootstrap.min.css" %} rel="stylesheet"> -->
 
     <link href={% static "css/bootstrap-icons.css" %} rel="stylesheet">
 
     <link href={% static "css/templatemo-topic-listing.css" %} rel="stylesheet">
 
     <link href={% static "css/my.css" %} rel="stylesheet">
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
 </head>
