update youtube tools

--- a/Youtube/templates/dwn/download_playlist.html
+++ b/Youtube/templates/dwn/download_playlist.html
@@ -179,7 +179,7 @@
                                                                     </button>
                                                                     </div>
                                                                     <div class="modal-body">
-                                                                        <table class="table">
+                                                                        <table class="table table-responsive">
                                                                             <thead class="table-dark">
                                                                                 <tr>
                                                                                     <th>#</th>
@@ -212,7 +212,7 @@
                                                                                         No
                                                                                         {% endif %}
                                                                                     </td>
-                                                                                    <td><a href="{{stream.url}}"><div class="btn btn-primary">Download</div></a></td>
+                                                                                    <td><a href="{{stream.url}}" target="_blank"><div class="btn btn-primary">Download</div></a></td>
                                                                                 </tr>
                                                                                 {% endfor %}
                                                                             </tbody>
