--- a/Youtube/templates/head.html
+++ b/Youtube/templates/head.html
@@ -9,24 +9,21 @@
 
     <title>Topic Listing Bootstrap 5 Template</title>
 
-    <!-- CSS FILES -->
     <link rel="shortcut icon" href={% static "images/logo.png" %} type="image/x-icon">
-
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
-
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Open+Sans&display=swap"
-        rel="stylesheet">
+    rel="stylesheet">
+    
+    <!-- CSS FILES -->
 
-    <!-- <link href={% static "css/bootstrap.min.css" %} rel="stylesheet"> -->
-
+    <link href={% static "css/bootstrap.min.css" %} rel="stylesheet">
     <link href={% static "css/bootstrap-icons.css" %} rel="stylesheet">
-
     <link href={% static "css/templatemo-topic-listing.css" %} rel="stylesheet">
-
     <link href={% static "css/my.css" %} rel="stylesheet">
     
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    {% comment %} <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> {% endcomment %}
+    
     
 </head>
