--- a/Youtube/templates/dwn/playlist.html
+++ b/Youtube/templates/dwn/playlist.html
@@ -31,7 +31,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_2">Videos</a>
+                            <a class="nav-link click-scroll" href="/">Video</a>
                         </li>
 
                         <li class="nav-item">
@@ -96,7 +96,7 @@
                             <div class="d-flex">
                                 <div>
                                     <h5 class="mb-2">{{title}}</h5>
-                                    <span class="badge bg-design">{{length}}</span>
+                                    Total Videos:<span class="badge bg-design">{{length}}</span>
                                 </div>
 
                             </div>
@@ -113,7 +113,7 @@
         <section class="explore-section section-padding" id="section_2">
             <div class="container">
                 <div class="col-12 text-center">
-                    <h2 class="mb-4">Browse Topics</h1>
+                    <h2 class="mb-4">Download Here</h1>
                 </div>
             </div>
 
@@ -134,6 +134,8 @@
                                             }
                                         </script>
                                         <div class="btn btn-primary" onclick="copyUrls()">Copy Links</div>
+                                        <button class="btn btn-primary">Reverse</button>
+                                        <button class="btn btn-primary">Add Numbers</button>
                                         <table class="table">
                                             <thead class="table-dark">
                                                 <tr>
@@ -184,11 +186,9 @@
                                 </div>
 
                                 <li>
-                                    <h4 class="text-white mb-3">Search your favourite topic</h4>
+                                    <h4 class="text-white mb-3">Paste the link of video.</h4>
 
-                                    <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                        Reiciendis, cumque magnam? Sequi, cupiditate quibusdam alias illum sed esse ad
-                                        dignissimos libero sunt, quisquam numquam aliquam? Voluptas, accusamus omnis?
+                                    <p class="text-white">Find the youtube video you want to download and paste the link in bar. The link with "watch=" is preferable.
                                     </p>
 
                                     <div class="icon-holder">
@@ -197,11 +197,9 @@
                                 </li>
 
                                 <li>
-                                    <h4 class="text-white mb-3">Bookmark &amp; Keep it for yourself</h4>
+                                    <h4 class="text-white mb-3">Stream selection</h4>
 
-                                    <p class="text-white">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint
-                                        animi necessitatibus aperiam repudiandae nam omnis est vel quo, nihil repellat
-                                        quia velit error modi earum similique odit labore. Doloremque, repudiandae?</p>
+                                    <p class="text-white">Multiple streams of audio and video are availiable. You can choose whether to download audio only, video only or audio+video stream.</p>
 
                                     <div class="icon-holder">
                                         <i class="bi-bookmark"></i>
@@ -209,11 +207,9 @@
                                 </li>
 
                                 <li>
-                                    <h4 class="text-white mb-3">Read &amp; Enjoy</h4>
+                                    <h4 class="text-white mb-3">Download</h4>
 
-                                    <p class="text-white">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                        Animi vero quisquam, rem assumenda similique voluptas distinctio, iste est hic
-                                        eveniet debitis ut ducimus beatae id? Quam culpa deleniti officiis autem?</p>
+                                    <p class="text-white">Click the download button of your desired stream and you will be redirected to the stream. IF you you do not have IDM then click on three dots and then click download.</p>
 
                                     <div class="icon-holder">
                                         <i class="bi-book"></i>
@@ -223,12 +219,12 @@
                         </div>
                     </div>
 
-                    <div class="col-12 text-center mt-5">
+                    <!-- <div class="col-12 text-center mt-5">
                         <p class="text-white">
                             Want to learn more?
                             <a href="#" class="btn custom-btn custom-border-btn ms-3">Check out Youtube</a>
                         </p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -253,16 +249,13 @@
                                 <h2 class="accordion-header" id="headingOne">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        What is Topic Listing?
+                                        What is Youtube Playlist downloader?
                                     </button>
                                 </h2>
 
                                 <div id="collapseOne" class="accordion-collapse collapse show"
                                     aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                                    <div class="accordion-body">
-                                        Topic Listing is free Bootstrap 5 CSS template. <strong>You are not allowed to
-                                            redistribute this template</strong> on any other template collection website
-                                        without our permission. Please contact TemplateMo for more detail. Thank you.
+                                    <div class="accordion-body">It is the only availiable youtube playlist downloader over the web. It allows you to donwnload complete playlist in just few clicks.
                                     </div>
                                 </div>
                             </div>
@@ -271,15 +264,14 @@
                                 <h2 class="accordion-header" id="headingTwo">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        How to find a topic?
+                                        Is it free?
                                     </button>
                                 </h2>
 
                                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        You can search on Google with <strong>keywords</strong> such as templatemo
-                                        portfolio, templatemo one-page layouts, photography, digital marketing, etc.
+                                        Yes it is completely free as it is in development phase now.
                                     </div>
                                 </div>
                             </div>
@@ -289,16 +281,14 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseThree" aria-expanded="false"
                                         aria-controls="collapseThree">
-                                        Does it need to paid?
+                                        Does it need any sign up?
                                     </button>
                                 </h2>
 
                                 <div id="collapseThree" class="accordion-collapse collapse"
                                     aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        You can modify any of this with custom CSS or overriding our default variables.
-                                        It's also worth noting that just about any HTML can go within the
-                                        <code>.accordion-body</code>, though the transition does limit overflow.
+                                        No it doesn't requires any sign up or subscription.
                                     </div>
                                 </div>
                             </div>
