--- a/Youtube/templates/footer.html
+++ b/Youtube/templates/footer.html
@@ -6,7 +6,7 @@
             <div class="col-lg-3 col-12 mb-4 pb-2">
                 <a class="navbar-brand mb-2" href="index.html">
                     <i class="bi-back"></i>
-                    <span>Topic</span>
+                    <span>YTPD</span>
                 </a>
             </div>
 
@@ -19,15 +19,15 @@
                     </li>
 
                     <li class="site-footer-link-item">
-                        <a href="#" class="site-footer-link">How it works</a>
+                        <a href="#section_3" class="site-footer-link">How it works</a>
                     </li>
 
                     <li class="site-footer-link-item">
-                        <a href="#" class="site-footer-link">FAQs</a>
+                        <a href="section_4" class="site-footer-link">FAQs</a>
                     </li>
 
                     <li class="site-footer-link-item">
-                        <a href="#" class="site-footer-link">Contact</a>
+                        <a href="/about" class="site-footer-link">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -36,20 +36,20 @@
                 <h6 class="site-footer-title mb-3">Information</h6>
 
                 <p class="text-white d-flex mb-1">
-                    <a href="tel: 305-240-9671" class="site-footer-link">
-                        305-240-9671
+                    <a href="tel: +92 3117761815" class="site-footer-link">
+                        +92 3117761815
                     </a>
                 </p>
 
                 <p class="text-white d-flex">
                     <a href="mailto:info@company.com" class="site-footer-link">
-                        info@company.com
+                        samiulhaq1221@gmail.com
                     </a>
                 </p>
             </div>
 
             <div class="col-lg-3 col-md-4 col-12 mt-4 mt-lg-0 ms-auto">
-                <div class="dropdown">
+                {% comment %} <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         English</button>
@@ -61,7 +61,7 @@
 
                         <li><button class="dropdown-item" type="button">Arabic</button></li>
                     </ul>
-                </div>
+                </div> {% endcomment %}
 
                 <p class="copyright-text mt-lg-5 mt-4">Copyright © 2048 Topic Listing Center. All rights reserved.
                     <br><br>Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a>
