--- a/Youtube/templates/head.html
+++ b/Youtube/templates/head.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     
 
-    <title>Topic Listing Bootstrap 5 Template</title>
+    <title>YTPD</title>
 
     <link rel="shortcut icon" href={% static "images/logo.png" %} type="image/x-icon">
     
