--- a/Youtube/templates/dwn/index.html
+++ b/Youtube/templates/dwn/index.html
@@ -126,9 +126,8 @@
                     <h2 class="mb-4">Download Here</h1>
                 </div>
             </div>
-            </div>
 
-            <div class="container-fluid">
+            <!-- <div class="container-fluid">
                 <div class="row">
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item" role="presentation">
@@ -151,7 +150,7 @@
 
                     </ul>
                 </div>
-            </div>
+            </div> -->
 
             <div class="container">
                 <div class="row">
@@ -253,58 +252,6 @@
                                     {% endif %}
                                     {% endfor %}
                                 </div>
-                            </div>
-                        </div>
-
-                        <div class="tab-pane fade" id="music-tab-pane" role="tabpanel" aria-labelledby="music-tab"
-                            tabindex="0">
-                            <div class="row">
-                                {% for stream in streams %}
-                                {% if stream.includes_video_track and not stream.includes_audio_track %}
-                                <div class="col-lg-3 col-md-6 col-9 mb-4 mb-lg-3">
-                                    <div class="custom-block bg-white shadow-lg">
-                                        <a href="topics-detail.html">
-                                            <!-- <img src={{thumbnail}} class="custom-block-image img-fluid" alt=""> -->
-                                            <div class="d-flex">
-                                                <div>
-                                                    <!-- <h5 class="mb-2">{{title}}</h5> -->
-
-                                                    <!-- <span class="badge bg-design">{{duration}}</span> -->
-
-                                                    {% if stream.includes_audio_track %}
-                                                    <img src={% static "images/yes_audio.svg" %} style="height:30px;"
-                                                        alt="" srcset="">
-                                                    <span>Contains audio</span><br>
-                                                    {% else %}
-                                                    <img src={% static "images/no_audio.webp" %} style="height:30px;"
-                                                        alt="" srcset="">
-                                                    <span>No audio</span><br>
-                                                    {% endif %}
-
-                                                    {% if stream.includes_video_track %}
-                                                    <img src={% static "images/yes_video.png" %} style="height:30px;"
-                                                        alt="" srcset="">
-                                                    <span>Contains video</span>
-                                                    {% else %}
-                                                    <img src={% static "images/no_video.png" %} style="height:30px;"
-                                                        alt="" srcset="">
-                                                    <span>No video</span>
-                                                    {% endif %}
-
-                                                    <p>{% getformat stream.mime_type%}/{{stream.resolution}}</p>
-
-                                                    <div style="display: ruby-text; margin-top:10px">
-                                                        <a href="{{stream.url}}" download target="_blank"><button
-                                                                type="submit"
-                                                                class="btn btn-primary flex margin-top ">Download</button></a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                                {% endif %}
-                                {% endfor %}
                             </div>
                         </div>
                     </div>
